<resources>
    <string name="app_name">ZsebPiac</string>
    <string name="facebook_app_id">354327718466314</string>
    <string name="fb_login_protocol_scheme">fb354327718466314</string>
    <string name="email">Email</string>
    <string name="passw">Jelszó</string>
    <string name="login">Belépés</string>
    <string name="forgot_passw">Elfelejtette jelszavát?</string>
    <string name="or">vagy</string>
    <string name="facebook_login">Belépés Facebook fiókkal</string>
    <string name="google_login">Belépés Google fiókkal</string>
    <string name="no_account">Nincs fiókja?</string>
    <string name="create_account">Fiók létrehozása</string>
    <string name="choose">Kérem válasszon!</string>
    <string name="producer">Őstermelő</string>
    <string name="customer">Vásárló</string>
    <string name="first_name">Keresztnév</string>
    <string name="last_name">Vezetéknév</string>
    <string name="producer_id">Őstermelői azonosító</string>
    <string name="phones">Telefonszámok</string>
    <string name="addresses">Átvételi pontok</string>
    <string name="old_passw">Régi jelszó:</string>
    <string name="new_passw">Új jelszó:</string>
    <string name="new_passw_again">Új jelszó mégegyszer:</string>
    <string name="modify"><u>Módosítás</u></string>
    <string-array name="product_category_array">
        <item>Zöldség</item>
        <item>Gyümölcs</item>
        <item>Gabona</item>
        <item>Tojás</item>
        <item>Tejtermék</item>
        <item>Hús</item>
        <item>Méz</item>
    </string-array>

</resources>
