<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_logo"
        android:fillViewport="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginLeft="36dp"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/text_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_height"
                    android:layout_marginBottom="@dimen/basic_space"
                    android:background="@drawable/trans_white_rectangle"
                    android:drawableLeft="@drawable/ic_user_icon"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/email"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/small_text" />

                <AutoCompleteTextView
                    android:id="@+id/text_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_height"
                    android:background="@drawable/trans_white_rectangle"
                    android:drawableLeft="@drawable/ic_password_icon"
                    android:drawableStart="@drawable/ic_password_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/passw"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHint"
                    android:textSize="@dimen/small_text"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_height"
                    android:layout_marginBottom="@dimen/basic_space"
                    android:background="@drawable/login_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="@dimen/medium_text" />

                <TextView
                    android:id="@+id/text_forgot_passw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/forgot_passw"
                    android:textAllCaps="false"
                    android:textColor="@drawable/text_button_color"
                    android:textSize="@dimen/medium_text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/text_divide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/or"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/small_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/text_divide"
                        android:layout_toStartOf="@id/text_divide"
                        android:background="@color/colorPrimaryText" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/text_divide"
                        android:layout_toEndOf="@+id/text_divide"
                        android:background="@color/colorPrimaryText" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_height"
                    android:layout_marginBottom="@dimen/basic_space"
                    android:background="@drawable/facebook_login"
                    android:drawableLeft="@drawable/ic_facebook_icon"
                    android:drawableStart="@drawable/ic_facebook_icon"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:text="@string/facebook_login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="@dimen/medium_text" />

                <Button
                    android:id="@+id/button_google"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/basic_height"
                    android:background="@drawable/google_login"
                    android:drawableLeft="@drawable/ic_google_icon"
                    android:drawableStart="@drawable/ic_google_icon"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/google_login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="@dimen/medium_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_container"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/medium_text" />

                <TextView
                    android:id="@+id/text_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@drawable/text_button_color"
                    android:textSize="@dimen/medium_text" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>