<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProducersDataActivity">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/formBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_toolbar"
        android:layout_marginTop="@dimen/basic_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:id="@+id/text_lastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:id="@+id/text_firstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/producer_id"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:id="@+id/text_producerid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text" />
            <!--
                        <AutoCompleteTextView
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/trans_white_rectangle"
                            android:paddingLeft="15dp"
                            android:paddingStart="15dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/small_text" />
            -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/phones"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <ListView
                android:id="@+id/list_phones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/button_add_phone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="right|end"
                android:layout_marginBottom="@dimen/basic_space" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/addresses"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/list_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/button_add_address"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="right|end"
                android:layout_marginBottom="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/old_passw"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/new_passw"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_space"
                android:text="@string/new_passw_again"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/medium_text" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_height"
                android:layout_marginBottom="@dimen/basic_space"
                android:background="@drawable/trans_white_rectangle"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>