<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:paddingTop="275dp"
        android:scaleType="centerCrop"
        android:src="@drawable/choose" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/choose"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="ChooseProducers"
            android:scaleType="fitCenter"
            android:src="@drawable/ostermelo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:onClick="ChooseProducers"
            android:text="@string/producer"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:layout_marginTop="-75dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:onClick="ChooseCustomer"
            android:src="@drawable/vasarlo"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="ChooseCustomer"
            android:text="@string/customer"
            android:textColor="@color/colorPrimaryText"
            android:textSize="28sp"
            android:layout_marginTop="-75dp" />
    </LinearLayout>

</RelativeLayout>